# Fourrier

./: .gitignore  CMakeLists.txt  README.md
audio files/: SS-OCT.pptx
src/: App.cpp  App.h  FileManager.cpp  FileManager.h  SigProccesing.h  SigVisualizer.cpp  SigVisualizer.h  Sigproccesing.cpp  UI.cpp  UI.h  Wav.cpp  Wav.h  WavReader.cpp  WavReader.h  main.cpp
